// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProteinProcessingSection should render when PTMeXchange is available 1`] = `
<DocumentFragment>
  <section
    class="card"
    data-entry-section="true"
    id="ptm_processing"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header card__header--with-separator"
      >
        <h2
          data-article-id="ptm_processing_section"
        >
          PTM/Processing
        </h2>
      </div>
      <div
        class="card__content"
      >
        <h3>
          Features
        </h3>
        <p>
          Showing features for 
          <span
            data-article-id="chain"
          >
            chain
          </span>
          , 
          <span
            data-article-id="mod_res_large_scale"
          >
            modified residue (large scale data)
          </span>
          .
        </p>
        <div>
          <div
            class="nightingale-zoom-tool"
          >
            <span
              aria-hidden="true"
              class="nightingale-button-content"
            >
              <test-file-stub
                height="19"
              />
            </span>
            <span
              aria-hidden="true"
              class="nightingale-button-content"
            >
              <test-file-stub
                height="19"
              />
            </span>
            <span
              aria-hidden="true"
              class="nightingale-button-content"
            >
              <test-file-stub
                height="19"
              />
            </span>
          </div>
          <button
            class="button tertiary"
            type="button"
          >
            <test-file-stub />
            Download
          </button>
          <a
            class="full-view"
            href="/uniprotkb/undefined/feature-viewer"
            title="View in the Feature Viewer"
          >
            <test-file-stub
              height="19"
            />
          </a>
          <nightingale-manager
            reflected-attributes="highlight,display-start,display-end,selectedid"
            style="display: block; line-height: 0;"
          >
            <nightingale-navigation
              style="width: 100%; height: 100%;"
            />
            <nightingale-track
              no-scroll="true"
              style="width: 100%; height: 100%;"
            />
            <nightingale-sequence
              no-scroll="true"
              numberofticks="0"
              style="width: 100%; height: 100%;"
            />
            <!---->
          </nightingale-manager>
        </div>
        <table
          class="table"
        >
          <thead
            class=""
          >
            <tr
              class="row"
            >
              <th>
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown"
                >
                  <button
                    class="button tertiary"
                    type="button"
                  >
                    ±
                  </button>
                </div>
              </th>
              <th>
                Type
                <br />
                <select>
                  <option
                    value="All"
                  >
                    All
                  </option>
                  <option
                    value="Chain"
                  >
                    Chain
                  </option>
                  <option
                    value="Modified residue (large scale data)"
                  >
                    Modified residue (large scale data)
                  </option>
                </select>
              </th>
              <th>
                ID
              </th>
              <th>
                Position(s)
              </th>
              <th>
                Source
                <br />
                <select>
                  <option
                    value="All"
                  >
                    All
                  </option>
                  <option
                    value="UniProt"
                  >
                    UniProt
                  </option>
                  <option
                    value="PTMeXchange"
                  >
                    PTMeXchange
                  </option>
                </select>
              </th>
              <th>
                Description
              </th>
              <th />
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="row has-extra-content"
            >
              <td>
                <button
                  aria-controls="1"
                  aria-expanded="false"
                  type="button"
                >
                  +
                </button>
              </td>
              <td>
                Chain
              </td>
              <td>
                id value CHAIN
              </td>
              <td>
                2-8
              </td>
              <td>
                UniProt
              </td>
              <td>
                Cu
                <sup>
                  2+
                </sup>
                 A2 (
                <a
                  href="/uniprotkb?query=ft_binding:"ChEBICHEBI:3314""
                >
                  UniProtKB
                </a>
                 | 
                <a
                  class="external-link"
                  href="https://www.ebi.ac.uk/chebi/searchId.do?chebiId=ChEBICHEBI:3314"
                  rel="noopener"
                  target="_blank"
                >
                  ChEBI
                  <test-file-stub
                    data-testid="external-link-icon"
                    width="12.5"
                  />
                </a>
                ); Some note of Ca
                <sup>
                  2+
                </sup>
                 A1 (
                <a
                  href="/uniprotkb?query=ft_binding:"ChEBICHEBI:3214""
                >
                  UniProtKB
                </a>
                 | 
                <a
                  class="external-link"
                  href="https://www.ebi.ac.uk/chebi/searchId.do?chebiId=ChEBICHEBI:3214"
                  rel="noopener"
                  target="_blank"
                >
                  ChEBI
                  <test-file-stub
                    data-testid="external-link-icon"
                    width="12.5"
                  />
                </a>
                ); Some note; In isoform sequence 1; description value 123
                <button
                  aria-controls="2"
                  aria-expanded="false"
                  class="svg-colour-reviewed evidence-tag"
                  data-testid="evidence-tag-trigger"
                  type="button"
                >
                  <test-file-stub
                    height="12"
                    width="12"
                  />
                  <span
                    class="evidence-tag__label"
                  >
                    1 publication
                  </span>
                </button>
                <div
                  class="evidence-tag-content "
                  data-testid="evidence-tag-content"
                  id="2"
                />
              </td>
              <td>
                <div
                  class="button-group"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown"
                  >
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      <test-file-stub
                        width="1.4ch"
                      />
                      Tools
                    </button>
                  </div>
                  <button
                    class="button tertiary no-small"
                    title="Add 1 entry to the basket"
                    type="button"
                  >
                    <test-file-stub />
                    Add
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="row extra-content"
              hidden=""
              id="1"
            >
              <td />
            </tr>
            <tr
              class="row odd has-extra-content"
            >
              <td>
                <button
                  aria-controls="3"
                  aria-expanded="false"
                  type="button"
                >
                  +
                </button>
              </td>
              <td>
                Modified residue (large scale data)
              </td>
              <td />
              <td>
                215
              </td>
              <td>
                PTMeXchange
              </td>
              <td>
                Phosphoserine
                <span
                  data-article-id="mod_res_large_scale#what-is-the-goldsilverbronze-criterion"
                >
                  <button
                    class="chip chip--compact secondary Silver"
                    type="button"
                  >
                    Silver
                  </button>
                </span>
                <button
                  aria-controls="4"
                  aria-expanded="false"
                  class="svg-colour-unreviewed evidence-tag"
                  data-testid="evidence-tag-trigger"
                  type="button"
                >
                  <test-file-stub
                    height="12"
                    width="12"
                  />
                  <span
                    class="evidence-tag__label"
                  >
                    Combined sources
                  </span>
                </button>
                <div
                  class="evidence-tag-content "
                  data-testid="evidence-tag-content"
                  id="4"
                />
              </td>
              <td />
            </tr>
            <tr
              class="row extra-content odd"
              hidden=""
              id="3"
            >
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ProteinProcessingSection should render when no PTMeXchange is available 1`] = `
<DocumentFragment>
  <section
    class="card"
    data-entry-section="true"
    id="ptm_processing"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header card__header--with-separator"
      >
        <h2
          data-article-id="ptm_processing_section"
        >
          PTM/Processing
        </h2>
      </div>
      <div
        class="card__content"
      >
        <h3>
          Features
        </h3>
        <p>
          Showing features for 
          <span
            data-article-id="signal"
          >
            signal
          </span>
          , 
          <span
            data-article-id="chain"
          >
            chain
          </span>
          .
        </p>
        <div>
          <div
            class="nightingale-zoom-tool"
          >
            <span
              aria-hidden="true"
              class="nightingale-button-content"
            >
              <test-file-stub
                height="19"
              />
            </span>
            <span
              aria-hidden="true"
              class="nightingale-button-content"
            >
              <test-file-stub
                height="19"
              />
            </span>
            <span
              aria-hidden="true"
              class="nightingale-button-content"
            >
              <test-file-stub
                height="19"
              />
            </span>
          </div>
          <button
            class="button tertiary"
            type="button"
          >
            <test-file-stub />
            Download
          </button>
          <a
            class="full-view"
            href="/uniprotkb/undefined/feature-viewer"
            title="View in the Feature Viewer"
          >
            <test-file-stub
              height="19"
            />
          </a>
          <nightingale-manager
            reflected-attributes="highlight,display-start,display-end,selectedid"
            style="display: block; line-height: 0;"
          >
            <nightingale-navigation
              style="width: 100%; height: 100%;"
            />
            <nightingale-track
              no-scroll="true"
              style="width: 100%; height: 100%;"
            />
            <nightingale-sequence
              no-scroll="true"
              numberofticks="0"
              style="width: 100%; height: 100%;"
            />
            <!---->
          </nightingale-manager>
        </div>
        <table
          class="table"
        >
          <thead
            class=""
          >
            <tr
              class="row"
            >
              <th>
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown"
                >
                  <button
                    class="button tertiary"
                    type="button"
                  >
                    ±
                  </button>
                </div>
              </th>
              <th>
                Type
                <br />
                <select>
                  <option
                    value="All"
                  >
                    All
                  </option>
                  <option
                    value="Signal"
                  >
                    Signal
                  </option>
                  <option
                    value="Chain"
                  >
                    Chain
                  </option>
                </select>
              </th>
              <th>
                ID
              </th>
              <th>
                Position(s)
              </th>
              <th>
                Description
              </th>
              <th />
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="row has-extra-content"
            >
              <td>
                <button
                  aria-controls="1"
                  aria-expanded="false"
                  type="button"
                >
                  +
                </button>
              </td>
              <td>
                Signal
              </td>
              <td />
              <td>
                1-27
              </td>
              <td>
                <button
                  aria-controls="2"
                  aria-expanded="false"
                  class="svg-colour-reviewed evidence-tag"
                  data-testid="evidence-tag-trigger"
                  type="button"
                >
                  <test-file-stub
                    height="12"
                    width="12"
                  />
                  <span
                    class="evidence-tag__label"
                  >
                    Sequence analysis
                  </span>
                </button>
                <div
                  class="evidence-tag-content "
                  data-testid="evidence-tag-content"
                  id="2"
                />
              </td>
              <td>
                <div
                  class="button-group"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown"
                  >
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      <test-file-stub
                        width="1.4ch"
                      />
                      Tools
                    </button>
                  </div>
                  <button
                    class="button tertiary no-small"
                    title="Add 1 entry to the basket"
                    type="button"
                  >
                    <test-file-stub />
                    Add
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="row extra-content"
              hidden=""
              id="1"
            >
              <td />
            </tr>
            <tr
              class="row odd has-extra-content"
            >
              <td>
                <button
                  aria-controls="3"
                  aria-expanded="false"
                  type="button"
                >
                  +
                </button>
              </td>
              <td>
                Chain
              </td>
              <td>
                PRO_0000448571
              </td>
              <td>
                28-772
              </td>
              <td>
                A type blood N-acetyl-alpha-D-galactosamine deacetylase
              </td>
              <td>
                <div
                  class="button-group"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown"
                  >
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      <test-file-stub
                        width="1.4ch"
                      />
                      Tools
                    </button>
                  </div>
                  <button
                    class="button tertiary no-small"
                    title="Add 1 entry to the basket"
                    type="button"
                  >
                    <test-file-stub />
                    Add
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="row extra-content odd"
              hidden=""
              id="3"
            >
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
